<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <HorizontalScrollView
        android:id="@+id/horizontal_sv"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_all"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_all"
                android:textColor="#ff4e00"
                android:onClick="onCategoryClick"/>
            <TextView
                android:id="@+id/tv_clothing"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_clothing"
                android:onClick="onCategoryClick"/>
            <TextView
                android:id="@+id/tv_shoes_bags"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_shoes_bags"
                android:onClick="onCategoryClick"/>
            <TextView
                android:id="@+id/tv_food"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_food"
                android:onClick="onCategoryClick"/>
            <TextView
                android:id="@+id/tv_jewelry"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_jewelry"
                android:onClick="onCategoryClick"/>
            <TextView
                android:id="@+id/tv_appliances"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_appliances"
                android:onClick="onCategoryClick"/>
            <TextView
                android:id="@+id/tv_baby"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_baby"
                android:onClick="onCategoryClick"/>
            <TextView
                android:id="@+id/tv_retail"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_retail"
                android:onClick="onCategoryClick"/>
            <TextView
                android:id="@+id/tv_student"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_student"
                android:onClick="onCategoryClick"/>
            <TextView
                android:id="@+id/tv_logistics"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_logistics"
                android:onClick="onCategoryClick"/>
            <TextView
                android:id="@+id/tv_pickup_code"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_pickup_code"
                android:onClick="onCategoryClick"/>
            <TextView
                android:id="@+id/tv_general"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_general"
                android:onClick="onCategoryClick"/>
            <TextView
                android:id="@+id/tv_others"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/template_others"
                android:onClick="onCategoryClick"/>
        </LinearLayout>
    </HorizontalScrollView>
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp" />
    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/no_data" />
</LinearLayout>