<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp">
    <LinearLayout
        android:id="@+id/components_layout_tip"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_content_tip"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/components_layout_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/barcode_number" />

            <TextView
                android:id="@+id/components_btv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="123456789"
                android:background="@drawable/components_tv_bg" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/display_number" />

            <CheckBox
                android:id="@+id/components_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/components_layout_QRCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/qrcode_content" />

            <TextView
                android:id="@+id/components_btv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="https://www.sznyx.net/"
                android:background="@drawable/components_tv_bg" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/components_layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/current_content" />

            <TextView
                android:id="@+id/components_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/components_tv_bg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/font_size" />

            <SeekBar
                android:id="@+id/font_size_seekbar"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:max="51"
                android:min="11"
                android:progress="21" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/line_spacing" />

            <SeekBar
                android:id="@+id/line_spacing_seekbar"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:max="50"
                android:progress="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/spacing" />

            <SeekBar
                android:id="@+id/margin_seekbar"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:max="50"
                android:progress="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/alignment" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
                <LinearLayout
                    android:id="@+id/components_left_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="25dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/components_tv_bg">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/left" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/components_center_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="25dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/components_tv_bg">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/center" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/components_right_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="25dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/components_tv_bg">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/right" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/font_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/components_bold_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/components_tv_bg"
                    android:text="@string/bold" />

                <TextView
                    android:id="@+id/components_italic_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/components_tv_bg"
                    android:text="@string/italic"
                    android:textStyle="italic|bold" />

                <TextView
                    android:id="@+id/components_underline_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/components_tv_bg"
                    android:text="@string/underline" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/toggle_display_time" />

            <CheckBox
                android:id="@+id/components_cb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

