<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="#ff4e00"
        android:text="@string/app_name"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="430px"
        android:background="@drawable/button_bg_2"
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/button_bg_2"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/editor_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="#ffffff"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/components_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_bg_1"
                android:layout_marginRight="8dp"
                android:text="@string/components" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/home" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/content_contaier_background">
            <include layout="@layout/edit_print_components" />
        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/print"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingVertical="5dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg"
        android:text="@string/print" />
</LinearLayout>